# ibm-hackathon

./: .gitignore  README.md  package.json
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/analyzers/: __init__.py  technical_debt.py
backend/app/api/: routes.py
backend/app/graph/: __init__.py  graph_builder.py
backend/app/models/: __init__.py  schemas.py
backend/app/modernization/: __init__.py  analyzer.py
backend/app/parsers/: __init__.py  import_extractor.py  js_ts_extractor.py  python_extractor.py  repository_parser.py  verilog_extractor.py
backend/app/services/: analysis_service.py  storage.py
bob-sessions/: README.md
docs/: architecture.md  context.md  modernization.md  vision.md  workflows.md
examples/: billing.py  sample-service.py  users.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AegisDomain.tsx  AegisEdge.tsx  AegisNode.tsx  AnalysisPanel.tsx  DependencyGraph.tsx  MetricCard.tsx
frontend/lib/: api.ts
frontend/types/: aegis.ts  repolens.ts
