[project]
name = "aegis-backend"
version = "0.1.0"
description = "Repository intelligence backend for Aegis."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "networkx>=3.3",
  "tree-sitter>=0.22.0",
  "python-multipart>=0.0.9"
]

[tool.ruff]
line-length = 100
target-version = "py311"

